<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_8sdp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">


                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:text="@string/location_permission"
                    />

                <TextView
                    android:id="@+id/des_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_tv"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/location_permission_des"
                    />


                <RelativeLayout
                    android:layout_width="0dp"
                    app:layout_constraintTop_toBottomOf="@id/des_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/negative_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"

                        android:layout_marginEnd="@dimen/_10sdp"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        app:strokeColor="@color/red"
                        app:strokeWidth="@dimen/_1sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/postive_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_alignParentTop="true"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/grant"
                        android:textColor="@color/black"
                        app:strokeColor="@color/red"
                        app:strokeWidth="@dimen/_1sdp" />
                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</layout>
